Refactor OCG agent compilation